--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-backend",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Typescript Eslint config for the backend NodeJS",
   "main": "index.js",
   "repository": {
@@ -56,7 +56,8 @@
     "eslint-plugin-sonarjs": "^0.9.1",
     "eslint-plugin-switch-case": "^1.1.2",
     "eslint-plugin-unicorn": "^34.0.1",
-    "eslint-plugin-xss": "^0.1.12"
+    "eslint-plugin-xss": "^0.1.12",
+    "prettier": "^2.3.2"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
