--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-backend",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Typescript Eslint config for the backend NodeJS",
   "main": "index.js",
   "repository": {
@@ -57,6 +57,7 @@
     "eslint-plugin-switch-case": "^1.1.2",
     "eslint-plugin-unicorn": "^34.0.1",
     "eslint-plugin-xss": "^0.1.12",
+    "jest": "^29.5.0",
     "prettier": "^2.3.2"
   },
   "publishConfig": {
